--- a/templates/liens/index.html.twig
+++ b/templates/liens/index.html.twig
@@ -1,41 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liens index{% endblock %}
+{% block title %}Liens index
+{% endblock %}
 
 {% block body %}
-    <h1>Liens index</h1>
+	<h1>Liens index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Titre</th>
-                <th>Description</th>
-                <th>CreatedAt</th>
-                <th>Url</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for lien in liens %}
-            <tr>
-                <td>{{ lien.id }}</td>
-                <td>{{ lien.titre }}</td>
-                <td>{{ lien.description }}</td>
-                <td>{{ lien.createdAt ? lien.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td> <a href="{{ lien.url }}">{{ lien.url }}</a></td>
-                <td>
-                    <a href="{{ path('app_liens_show', {'id': lien.id}) }}">show</a>
-                    <a href="{{ path('app_liens_edit', {'id': lien.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<table class="table">
+		<thead>
+			<tr>
+				<th>Id</th>
+				<th>Titre</th>
+				<th>Description</th>
+				<th>resume</th>
+				<th>CreatedAt</th>
+				<th>Url</th>
+				<th>actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for lien in liens %}
+				<tr>
+					<td>{{ lien.id }}</td>
+					<td>{{ lien.titre }}</td>
+					<td>{{ lien.description }}</td>
+					<td>{{ lien.resume }}</td>
+					<td>{{ lien.createdAt ? lien.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+					<td>
+						<a href="{{ lien.url }}">{{ lien.url }}</a>
+					</td>
+					<td>
+						<a href="{{ path('app_liens_show', {'id': lien.id}) }}">show</a>
+						<a href="{{ path('app_liens_edit', {'id': lien.id}) }}">edit</a>
+					</td>
+				</tr>
+			{% else %}
+				<tr>
+					<td colspan="7">no records found</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_liens_new') }}">Create new</a>
+	<a href="{{ path('app_liens_new') }}">Create new</a>
 {% endblock %}
