--- a/templates/liens/show.html.twig
+++ b/templates/liens/show.html.twig
@@ -24,8 +24,10 @@
                 <td>{{ lien.createdAt ? lien.createdAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
             <tr>
-                <th>ModifiedAt</th>
-                <td>{{ lien.modifiedAt ? lien.modifiedAt|date('Y-m-d H:i:s') : '' }}</td>
+            <th>
+            Resume
+            </th>
+            <td>{{ lien.resume }}</td>
             </tr>
             <tr>
                 <th>Url</th>
