--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,8 @@
 {% endblock %}
 
 {% block body %}
-	<link rel="stylesheet" href="css/pico.min.css">
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 	<h1>Home</h1>
 
 	<table class="table">
