--- a/templates/liens/index.html.twig
+++ b/templates/liens/index.html.twig
@@ -4,6 +4,7 @@
 {% endblock %}
 
 {% block body %}
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 	<h1>Liens index</h1>
 
 	<table class="table">
